Change product card animation to avoid flex wrap skipping on render

--- a/src/components/ProductListPage/ProductCard.css
+++ b/src/components/ProductListPage/ProductCard.css
@@ -25,12 +25,10 @@
 
 @keyframes fade-in {
   from {
-    width: 230px;
     height: 160px;
     opacity: 0;
   }
   to {
-    width: 270px;
     height: 200px;
     opacity: 1;
   }
